Fixed checkbox and label alignment issue. Added additional style(top:2px) if the browser is Firefox browser.
git-svn-id: svn+ssh://subversion.telligen.com/var/www/html/repos/cmat/trunk/Development/mat@4046 de2f59c9-771b-4d1d-97da-b950f46c8601

Former-commit-id: 8689d9055efd44767135b3d6849f2e25d2f07b65

--- a/war/Mat.css
+++ b/war/Mat.css
@@ -1388,7 +1388,7 @@ padding: 2px;
 }
 .searchWidgetLabel{
 	font-size: 11px;
-     display: block;
+    display: block;
     padding-left: 15px;
     text-indent: -15px;
 }
@@ -1627,4 +1627,20 @@ padding: 2px;
    /*  font-size: 11px; 
    font-style: italic;*/
    color: darkgray;
+}
+
+.customCheckBoxLabel{
+	font-size: 13px;
+    text-indent: -15px;
+}
+
+.customCheckBox{
+    width: 17px;
+    height: 13px;
+    padding-left: 3px;
+    padding-right: 3px;
+    margin-top:2px;
+    vertical-align: bottom;
+    position: relative;
+    overflow: hidden;
 }
